[package]
name = "soda-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soda_sol = "0.0.8"
wasm-bindgen = "0.2.89"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3.3"
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde-json-wasm = "1.0.0"